refactor: move EndMultiplayerGame to EndRound, rename route /multiplayer/{id}/end to /multiplayer/{id}/guesses
