# api/openapi/bundled.yaml
@@ -938,11 +938,11 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-  /v1/multiplayer/{id}/end:
-    post:
-      operationId: endMultiplayerGame
-      summary: Ends a multiplayer game.
-      description: Ends a multiplayer game and returns all user guesses.
+  /v1/multiplayer/{id}/guesses:
+    get:
+      operationId: getMultiplayerGameGuesses
+      summary: Gets multiplayer game guesses
+      description: Returns all user guesses made during a multiplayer game.
       tags:
         - multiplayer
       x-ogen-operation-group: Multiplayer
